--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/form_ajustes.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/form_ajustes.html.twig
@@ -15,6 +15,15 @@
                      {% endif %}
                   </div>
                </div>
+               <div class="form-group{% if errCatAsig is defined %} has-error{% endif %}{% if okCatAsig is defined %} has-success{% endif %}">
+                  <label for="cfg_catAsig" class="col-xs-12 col-sm-4 control-label">Fecha de asignación de categorías</label>
+                  <div class="col-xs-12 col-sm-6">
+                     <select class="form-control" id="cfg_catAsig" name="catAsig">
+                        <option value="0"{% if catAsig == "0" %} selected{% endif %}>Al comienzo de la temporada</option>
+                        <option value="1"{% if catAsig == "1" %} selected{% endif %}>Cada día</option>
+                     </select>
+                  </div>
+               </div>
                <div class="form-group">
                   <div class="col-xs-offset-2 col-xs-8 col-sm-offset-4 col-sm-6">
                      <button id="ajSendBtn" type="button" class="btn btn-primary btn-block" onClick="changeSettings()"><span class="glyphicon glyphicon-save"></span> Guardar</button>
