--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/ver_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/ver_atleta.html.twig
@@ -43,7 +43,7 @@
                <tr><td colspan="6">{{ atl.notas|nl2br }}</td></tr>
             </tbody>
          </table>
-         <table class="table table-responsive visible-xs-block"">
+         <table class="table table-responsive visible-xs">
             <tbody>
                <tr><td><strong>FGA:</strong></td><td><small>{{ atl.lfga }}</small></td><td><strong>XOGADE:</strong></td><td><small>{{ atl.lxogade }}</small></td></tr>
                <tr><td><strong>Apellidos:</strong></td><td colspan="3">{{ atl.apellidos }}</td></tr>
