--- a/web/bundles/atletismo/css/index.css
+++ b/web/bundles/atletismo/css/index.css
@@ -90,6 +90,13 @@ h1 {
    text-transform: uppercase;
 }
 
+/*Bootstrap no asigna display:table a tablas en tamaño xs porque prevalece la regla display:block !important*/
+@media (max-width: 767px) { 
+  table.visible-xs {
+    display: table !important;
+  }
+}
+
 /*http://getbootstrap.com/examples/sticky-footer-navbar/*/
 .footer {
     background-color: #f5f5f5;
