Cuenta atletas inscritos

--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
@@ -48,7 +48,8 @@
             <th class="hidden-xs">Asistencia</th>
             <th><abbr title="Acciones" class="visible-xs">Acc.</abbr><div class="hidden-xs">Acciones</div></th>
          </tr>
-         {% for atl in atletas %}
+            {# {% for atl in atletas %} #}
+         {% for ins in inscripciones %}
          <tr>
             <td{% if com.esFeder != true %} class="hidden-xs"{% endif %}><small>AG-1234567</small></td>
             <td>Apellido1 Apellido2</td>
