--- a/web/bundles/atletismo/css/index.css
+++ b/web/bundles/atletismo/css/index.css
@@ -81,8 +81,8 @@ h1 {
    margin: 0;
 }
 
-.table .table td {
-   padding-left: 3em;
+.td-padding {
+   padding-left: 3em !important;
 }
 
 .table small{
